[package]
name = "objectstore-hdfs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Giovanni Manfredi <giovanni@manfredi.ai>"]
readme = "README.md"
description = "A object_store implementation for HDFS. It uses fs-hdfs which is a libhdfs Rust wrapper"
keywords = [
    "hadoop",
    "hdfs",
    "hdfs3",
    "object_store",
    "store",
]
repository = "https://github.com/Silemo/objectstore-hdfs"
rust-version = "1.62.1"

[dependencies]
# "stdlib"
bytes = { version = "1" }
chrono = { version = ">0.4.34", default-features = false, features = ["clock"] }

# runtime / async
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }

# object store and hdfs dependencies
object_store = "0.9"
fs-hdfs = { version = "0.1.12"}